# crispyx

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SCANPY_VALIDATION_PLAN.md  env.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarking/: Dockerfile  README.md  __init__.py  benchmark_config.yaml  benchmark_summary.md  docker-compose.yml  generate_demo_dataset.py  inspect_datasets.py  inspect_datasets.sh  run_benchmark.sh  run_benchmarks.py  run_rerun_scanpy.sh
benchmarking/config/: Adamson.yaml  Adamson_subset.yaml  Feng-gwsf.yaml  Feng-gwsnf.yaml  Feng-ts.yaml  Frangieh.yaml  Huang-HCT116.yaml  Huang-HEK293T.yaml  Nadig-HEPG2.yaml  Nadig-JURKAT.yaml  Replogle-E-k562.yaml  Replogle-E-rpe1.yaml  Replogle-GW-k562.yaml  Tian-crispra.yaml  Tian-crispri.yaml
benchmarking/dev/: README.md  __init__.py  benchmark_frozen_control.py  benchmark_numba_kernels.py  debug_lfcshrink.py  profile_contiguous_io.py  profile_irls_computation.py  profile_qc.py  profile_qc_memory.py  profile_replogle_gw.py  profile_replogle_gw_v2.py  profile_wilcoxon_memory.py  qc_memory_profiling_results.json  qc_profiling_results.json
benchmarking/figures/: aggregate_results.py  generate_combined_figure.py  generate_individual_figures.py
benchmarking/results/: benchmark_results.csv  benchmark_results.md  benchmark_results_summary.json
benchmarking/results/Adamson/: benchmark_report.md  results.md  summary.json
benchmarking/results/Adamson_subset/: benchmark_report.md  results.md  summary.json
benchmarking/results/Feng-gwsf/: benchmark_report.md  results.md
benchmarking/results/Feng-gwsnf/: benchmark_report.md  results.md  summary.json
benchmarking/results/Feng-ts/: benchmark_report.md  results.md
benchmarking/results/Frangieh/: benchmark_report.md  results.md
benchmarking/results/Huang-HCT116/: benchmark_report.md  results.md
benchmarking/results/Huang-HEK293T/: benchmark_report.md  results.md
benchmarking/results/Nadig-HEPG2/: benchmark_report.md  results.md
benchmarking/results/Nadig-JURKAT/: benchmark_report.md  results.md
benchmarking/results/Replogle-E-k562/: benchmark_report.md  results.md  summary.json
benchmarking/results/Replogle-E-rpe1/: benchmark_report.md  results.md
benchmarking/results/Replogle-GW-k562/: benchmark_report.md  results.md  summary.json
benchmarking/results/Tian-crispra/: benchmark_report.md  results.md  summary.json
benchmarking/results/Tian-crispri/: benchmark_report.md  results.md
benchmarking/singularity/: README.md  build_singularity.sh  run_singularity.sh  slurm_benchmark.sh  slurm_rerun_scanpy.sh  submit_benchmark.sh  submit_rerun_scanpy.sh
benchmarking/tools/: __init__.py  cache.py  comparison.py  constants.py  docker_worker.py  env_config.py  formatting.py  generate_results.py  memory.py  numba_warmup.py  profile_nb_glm.py  profiling.py  rerun_scanpy.py  run_benchmarks.py  visualization.py
docs/: Adamson_subset_results.rst  api.rst  benchmarking.rst  changelog.rst  comparison.rst  conf.py  contributing.rst  crispyx_tutorial.ipynb  faq.rst  index.rst  installation.rst  llms.txt  requirements.txt  usage.rst
notebooks/: crispyx_tutorial.ipynb  streamlined_crispr_tutorial.ipynb
src/crispyx/: __init__.py  _checkpoint.py  _kernels.py  _memory.py  _namespaces.py  _size_factors.py  _statistics.py  comparison.py  data.py  de.py  dimred.py  glm.py  plotting.py  profiling.py  pseudobulk.py  qc.py  scanpy_validation.py
src/scanpy/: __init__.py  pp.py
src/streamlined_crispr/: __init__.py  data.py  de.py  glm.py  metrics.py  pseudobulk.py  qc.py  scanpy_validation.py
tests/: conftest.py  test_benchmarking.py  test_convert_to_csc.py  test_convert_to_csr.py  test_data_helpers.py  test_de_lowexpr_filter.py  test_de_reload.py  test_dimred.py  test_groupby_alias.py  test_memory_dispatch.py  test_nb_glm.py  test_normalisation.py  test_plotting.py  test_profiling.py  test_qc_parity.py  test_scanpy_parity.py  test_streaming_control.py  test_wilcoxon_dispatch.py  test_workflow.py
tex/tex_pydeseq2/: 02_size_factor_comparison.tex  03_global_dispersion_estimation.tex  04_pydeseq2_shrinkage_aberration.tex  05_crispyx_nbglm_variants.tex  06_nbglm_irls_optimization.tex
tex/tex_scanpy/: 01_qc_design_comparison.aux  01_qc_design_comparison.fdb_latexmk  01_qc_design_comparison.fls  01_qc_design_comparison.out  01_qc_design_comparison.tex
