[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispyx"
version = "0.0.3"
description = "Memory-efficient streaming analysis of large-scale CRISPR and Perturb-seq screens on disk-backed AnnData files"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jin-Hong Du"}]
requires-python = ">=3.10"
keywords = [
    "CRISPR",
    "Perturb-seq",
    "single-cell RNA-seq",
    "AnnData",
    "Scanpy",
    "differential expression",
    "negative binomial GLM",
    "pseudobulk",
    "bioinformatics",
    "functional genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anndata>=0.9",
    "numpy>=1.23",
    "numba>=0.59",
    "pandas>=1.5",
    "scipy>=1.10",
    "h5py>=3.0",
    "joblib>=1.0",
    "scikit-learn>=1.0",
    "scanpy>=1.9.2",
    "seaborn>=0.12",
    "matplotlib>=3.5",
    "tqdm>=4.50",
]

[project.optional-dependencies]
test = [
    "filelock",
    "pytest",
    "statsmodels>=0.14",
    "pydeseq2>=0.4",
]
benchmark = [
    "pertpy>=0.4",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "psutil>=5.9",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-copybutton>=0.5",
    "nbsphinx>=0.9",
    "ipykernel>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jaydu1/crispyx"
Documentation = "https://crispyx.readthedocs.io"
Repository = "https://github.com/jaydu1/crispyx"
"Bug Tracker" = "https://github.com/jaydu1/crispyx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crispyx = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
    # Ignore h5py deprecation warnings about numpy.product (third-party issue)
    "ignore:`product` is deprecated as of NumPy 1.25.0:DeprecationWarning",
    # Ignore pydeseq2 FutureWarnings about dtype incompatibility (third-party issue)
    "ignore:Setting an item of incompatible dtype is deprecated:FutureWarning",
    # Ignore UserWarnings from third-party libraries during tests
    "ignore:Some cells have zero counts:UserWarning",
    "ignore:Every gene contains at least one zero:UserWarning",
    "ignore:The dispersion trend curve fitting did not converge:UserWarning",
    # Ignore AnnData implicit modification warnings (third-party issue)
    "ignore:Transforming to str index:anndata.ImplicitModificationWarning",
    # Ignore AnnData old-format warnings from test fixture files written without encoding metadata
    "ignore:.*was written without encoding metadata:anndata.OldFormatWarning",
    # Ignore matplotlib layout warnings in plotting tests
    "ignore:Tight layout not applied:UserWarning",
]
